# bit

./: homework.py  main.py  pyproject.toml  requirements.txt
notebooks/: example.ipynb
openai-client/: github_client_openai.py  github_simplified_RAG.py  github_structured.py  openai_client.py
