[project]
name = "bit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.43",
    "langchain-openai>=0.3.8",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.3.6",
    "longchain>=0.4.2",
    "openai>=1.65.5",
    "pydantic>=2.10.6",
    "pypdf>=5.3.1",
    "rich>=13.9.4",
    "st>=0.0.8",
]
